Working on cable list tool (connections part)

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -158,6 +158,7 @@ set (CL_SOURCES_FILES
           mdtcablelist/mdtClApplicationWidgets.cpp
           mdtcablelist/mdtClVehicleTypeEditor.cpp
           mdtcablelist/mdtClConnectionTypeData.cpp
+          mdtcablelist/mdtClConnectionTypeModel.cpp
           mdtcablelist/mdtClConnectorData.cpp
           mdtcablelist/mdtClConnector.cpp
           mdtcablelist/mdtClConnectorEditor.cpp
