--- a/tests/mdttools/mdttesttool/CMakeLists.txt
+++ b/tests/mdttools/mdttesttool/CMakeLists.txt
@@ -17,7 +17,7 @@ target_link_libraries(mdtclconnectortest "mdttesttool${MDTLIB_VERSION_SUFFIX}")
 
 # * mdtClArticleConnectionTest executable *
 QT4_WRAP_CPP(MDT_ARTICLE_CONNECTION_TEST_MOC "mdtClArticleConnectionTest.h")
-add_executable(mdtclarticleconnectiontest mdtClArticleConnectionTest.cpp ${MDT_ARTICLE_CONNECTION_TEST_MOC})
+add_executable(mdtclarticleconnectiontest mdtClArticleConnectionTest.cpp mdtCableListTestScenario.cpp ${MDT_ARTICLE_CONNECTION_TEST_MOC})
 target_link_libraries(mdtclarticleconnectiontest ${QT_LIBRARIES})
 target_link_libraries(mdtclarticleconnectiontest "mdttest")
 target_link_libraries(mdtclarticleconnectiontest "mdtutils${MDTLIB_VERSION_SUFFIX}")
