Working on cable list tool (mainly unit connections)

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -182,6 +182,7 @@ set (CL_SOURCES_FILES
           mdtcablelist/mdtClPathGraphicsConnection.cpp
           mdtcablelist/mdtClPathGraphicsLink.cpp
           mdtcablelist/mdtClUnit.cpp
+          mdtcablelist/mdtClUnitConnection.cpp
           mdtcablelist/mdtClUnitConnectorData.cpp
           mdtcablelist/mdtClUnitConnectionData.cpp
           mdtcablelist/mdtClUnitConnectionDialog.cpp
