Working on cable list tool (mainly link part)

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -197,6 +197,7 @@ set (CL_SOURCES_FILES
           mdtcablelist/mdtClLinkDirectionModel.cpp
           mdtcablelist/mdtClLinkData.cpp
           mdtcablelist/mdtClVehicleTypeLinkData.cpp
+          mdtcablelist/mdtClVehicleTypeLinkAssignationWidgetItem.cpp
           mdtcablelist/mdtClLinkVersion.cpp
           mdtcablelist/mdtClLinkVersionModel.cpp
           mdtcablelist/mdtClLinkVersionDialog.cpp
