Working on cable list tool (commit before changing versionning schema)

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -148,6 +148,7 @@ set (CL_HEADER_FILES
           mdtcablelist/mdtClWireEditor.h
           mdtcablelist/mdtClLinkVersion.h
           mdtcablelist/mdtClUnitLinkDialog.h
+          mdtcablelist/mdtClUnitLinkModificationDialog.h
           mdtcablelist/mdtClLinkedUnitConnectionInfoDialog.h
           mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.h
           mdtcablelist/mdtClLinkBeamEditor.h
@@ -206,6 +207,7 @@ set (CL_SOURCES_FILES
           mdtcablelist/mdtClVehicleTypeLink.cpp
           mdtcablelist/mdtClDirectLink.cpp
           mdtcablelist/mdtClUnitLinkDialog.cpp
+          mdtcablelist/mdtClUnitLinkModificationDialog.cpp
           mdtcablelist/mdtClUnitVehicleType.cpp
           mdtcablelist/mdtClLinkedUnitConnectionInfoDialog.cpp
           mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.cpp
@@ -229,6 +231,7 @@ set (CL_FORM_FILES
           mdtcablelist/mdtClWireEditor.ui
           mdtcablelist/mdtClLinkVersionDialog.ui
           mdtcablelist/mdtClUnitLinkDialog.ui
+          mdtcablelist/mdtClUnitLinkModificationDialog.ui
           mdtcablelist/mdtClLinkedUnitConnectionInfoDialog.ui
           mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
           mdtcablelist/mdtClLinkBeamEditor.ui
