--- a/src/mdtdevice/CMakeLists.txt
+++ b/src/mdtdevice/CMakeLists.txt
@@ -73,20 +73,25 @@ if(UNIX)
 endif(UNIX)
 
 # Fichiers à traiter par le compilateur moc
-QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
+# QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
 
 # Fichiers à traiter par le compilateur uic
-QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
+# QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
 
 # Fichiers à traiter par le compilateur rcc
-QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
+# QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
 # Librairie du projet
-add_library (mdtdevice${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
+add_library (mdtdevice${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
 target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtutils${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtport${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
+target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} Qt5::Widgets)
+# add_library (mdtdevice${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
+# target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtutils${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} "mdtport${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtdevice${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
