--- a/src/mdtserialport/CMakeLists.txt
+++ b/src/mdtserialport/CMakeLists.txt
@@ -42,26 +42,29 @@ set (RESOURCE_FILES
 
 # Unix (Posix) specific files
 if(UNIX)
-  message("${PROJECT_SOURCE_DIR}/linux")
   set (SOURCES_FILES ${SOURCES_FILES} 
     linux/mdtSerialPort.cpp
   )
 endif(UNIX)
 
 # Fichiers à traiter par le compilateur moc
-QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
+# QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
 
 # Fichiers à traiter par le compilateur uic
-QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
+# QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
 
 # Fichiers à traiter par le compilateur rcc
-QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
+# QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
 # Librairie du projet
-add_library (mdtserialport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
-target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
+add_library (mdtserialport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
+target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} Qt5::Core)
 target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} "mdtport${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
+# add_library (mdtserialport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
+# target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
+# target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} "mdtport${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtserialport${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
