--- a/src/qt-solutions/qtsingleapplication-OLD/CMakeLists.txt
+++ b/src/qt-solutions/qtsingleapplication-OLD/CMakeLists.txt
@@ -1,49 +1,51 @@
 # Project file for Multi Diag Tools
+# * Part: mdtutils *
+# * Directory: mdtutils *
 
 # Project
 project (multidiagtools)
 
 # List of Qt headers (headers that contains Q_OBJECT macro)
-# set (HEADER_FILES 
-#           qtlocalpeer.h
-#           qtsingleapplication.h
-#     )
+set (HEADER_FILES 
+          qtlocalpeer.h
+          qtsingleapplication.h
+    )
 
 # List of source files
 set (SOURCES_FILES 
           qtlocalpeer.cpp
-#           qtlockedfile.cpp
+          qtlockedfile.cpp
           qtsingleapplication.cpp
     )
 
-# # List of .ui files
-# set (FORM_FILES
-#     )
-# 
-# # List of rcc files (Qt ressources)
-# set (RESOURCE_FILES
-# 
-#     )
+# List of .ui files
+set (FORM_FILES
+    )
+
+# List of rcc files (Qt ressources)
+set (RESOURCE_FILES
+
+    )
 
 # Platform specific files
 
 # Unix (Posix) specific files
-# if(UNIX)
-#   set (SOURCES_FILES ${SOURCES_FILES} 
-#           qtlockedfile_unix.cpp
-#   )
-#   set (HEADER_FILES ${HEADER_FILES} 
-#   )
-# endif(UNIX)
+if(UNIX)
+  set (SOURCES_FILES ${SOURCES_FILES} 
+          qtlockedfile_unix.cpp
+  )
+  set (HEADER_FILES ${HEADER_FILES} 
+  )
+endif(UNIX)
 
 # Windows specific files
-# if(WIN32)
-#   set (SOURCES_FILES ${SOURCES_FILES} 
-#           qtlockedfile_win.cpp
-#   )
-#   set (HEADER_FILES ${HEADER_FILES} 
-#   )
-# endif(WIN32)
+if(WIN32)
+  set (SOURCES_FILES ${SOURCES_FILES} 
+          qtlockedfile_win.cpp
+  )
+  set (HEADER_FILES ${HEADER_FILES} 
+  )
+endif(WIN32)
 
 # Files on witch moc compiler must work
 # QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
@@ -56,7 +58,7 @@ set (SOURCES_FILES
 
 # Output library
 add_library (qtsingleapplication${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
-target_link_libraries(qtsingleapplication${MDTLIB_VERSION_SUFFIX} Qt5::Widgets Qt5::Network)
+target_link_libraries(qtsingleapplication${MDTLIB_VERSION_SUFFIX} Qt5::Core)
 # add_library (qtsingleapplication${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
 # target_link_libraries(qtsingleapplication${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
 
