Some cleanup in CMake project files after Qt5 migration

--- a/src/mdttools/mdttesttool/CMakeLists.txt
+++ b/src/mdttools/mdttesttool/CMakeLists.txt
@@ -5,47 +5,6 @@
 # Project
 project (multidiagtools)
 
-# Header files for mdtTestTool
-set (TT_HEADER_FILES 
-          mdtTtTestSystemEditor.h
-#           mdtTtTestSystemComponent.h
-          mdtTtTestSystemComponentEditor.h
-          mdtTtTestSystemUnitEditor.h
-
-          mdtTtApplicationWidgets.h
-          mdtTtTestCableEditor.h
-          mdtTtLogicalTestCableEditor.h
-          mdtTtLogicalTestCableDialog.h
-          mdtTtLogicalTestCableDutWidget.h
-          mdtTtLogicalTestCableTsWidget.h
-          mdtTtTestCableOffsetTool.h
-          mdtTtTestLinkDialog.h
-          mdtTtTestNodeEditor.h
-          mdtTtTestNodeUnitDialog.h
-          mdtTtTestNodeRouteDialog.h
-          mdtTtTestModelEditor.h
-          mdtTtTestModelItemEditor.h
-          mdtTtTestNodeUnitSetupDialog.h
-          mdtTtTestNodeManager.h
-          mdtTtTestNodeModbusIoTool.h
-          #mdtTtTestNodeManagerWidget.h
-          mdtTtBasicTesterWindow.h
-          mdtTtTest.h
-          mdtTtTestModelGenerationDialog.h
-          mdtTtAbstractTester.h
-          mdtTtAbstractTestNodeCalibrationTool.h
-          mdtTtBasicTester.h
-          mdtTtBasicTestNodeCalibrationTool.h
-          mdtTtBasicTestNodeCalibrationWindow.h
-          mdtTtValueEditionDialog.h
-          mdtTtTestStep.h
-          mdtTtTestStepContainer.h
-          mdtTtTestStepWidget.h
-          mdtTtTestStepContainerWidget.h
-#           mdtTtValueLimits.h
-          mdtTtValueLimitsWidget.h
-    )
-
 # Sources files for mdtTestTool
 set (TT_SOURCES_FILES 
           mdtTtTestSystemEditor.cpp
@@ -103,56 +62,6 @@ set (TT_SOURCES_FILES
           mdtTtTestStepContainerWidget.cpp
           mdtTtValueLimits.cpp
           mdtTtValueLimitsWidget.cpp
-    )
-
-# Form files for mdtTestTool
-set (TT_FORM_FILES
-          mdtTtTestSystemEditor.ui
-          mdtTtTestSystemComponentEditor.ui
-          mdtTtTestSystemUnitEditor.ui
-
-          mdtTtTestCableEditor.ui
-          mdtTtLogicalTestCableEditor.ui
-          mdtTtLogicalTestCableDialog.ui
-          mdtTtLogicalTestCableDutWidget.ui
-          mdtTtLogicalTestCableTsWidget.ui
-          mdtTtTestLinkDialog.ui
-          mdtTtTestNodeEditor.ui
-          mdtTtTestNodeUnitDialog.ui
-          mdtTtTestModelEditor.ui
-          mdtTtTestModelItemEditor.ui
-          mdtTtTestNodeUnitSetupDialog.ui
-          mdtTtBasicTesterWindow.ui
-          mdtTtBasicTestNodeCalibrationWindow.ui
-          mdtTtTestNodeRouteDialog.ui
-          mdtTtTestModelGenerationDialog.ui
-          mdtTtValueEditionDialog.ui
-          mdtTtValueLimitsWidget.ui
-    )
-
-# Header files for mdtCableList
-set (CL_HEADER_FILES 
-          mdtcablelist/mdtClApplicationWidgets.h
-          mdtcablelist/mdtClVehicleTypeEditor.h
-          mdtcablelist/mdtClConnectorEditor.h
-          mdtcablelist/mdtClConnectorSelectionDialog.h
-          mdtcablelist/mdtClConnectorContactSelectionDialog.h
-          mdtcablelist/mdtClArticleEditor.h
-          mdtcablelist/mdtClArticleComponentDialog.h
-          mdtcablelist/mdtClArticleConnectionDialog.h
-          mdtcablelist/mdtClArticleLinkDialog.h
-          mdtcablelist/mdtClArticleSelectionDialog.h
-          mdtcablelist/mdtClPathGraphDialog.h
-          mdtcablelist/mdtClUnitConnectionDialog.h
-          mdtcablelist/mdtClUnitEditor.h
-          mdtcablelist/mdtClWireEditor.h
-          mdtcablelist/mdtClLinkVersion.h
-          mdtcablelist/mdtClUnitLinkDialog.h
-          mdtcablelist/mdtClLinkAttributeDialog.h
-          mdtcablelist/mdtClLinkedUnitConnectionInfoDialog.h
-          mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.h
-          mdtcablelist/mdtClLinkBeamEditor.h
-          mdtcablelist/mdtClConnectableConnectorDialog.h
     )
 
 # Source files for mdtCableList
@@ -217,52 +126,11 @@ set (CL_SOURCES_FILES
           mdtcablelist/mdtClConnectableConnectorDialog.cpp
     )
 
-# Form files for mdtCableList
-set (CL_FORM_FILES
-          mdtcablelist/mdtClVehicleTypeEditor.ui
-          mdtcablelist/mdtClConnectorEditor.ui
-          mdtcablelist/mdtClArticleEditor.ui
-          mdtcablelist/mdtClArticleComponentDialog.ui
-          mdtcablelist/mdtClArticleConnectionDialog.ui
-          mdtcablelist/mdtClArticleLinkDialog.ui
-          mdtcablelist/mdtClPathGraphDialog.ui
-          mdtcablelist/mdtClUnitConnectionDialog.ui
-          mdtcablelist/mdtClUnitEditor.ui
-          mdtcablelist/mdtClWireEditor.ui
-          mdtcablelist/mdtClLinkVersionDialog.ui
-          mdtcablelist/mdtClUnitLinkDialog.ui
-          mdtcablelist/mdtClLinkAttributeDialog.ui
-          mdtcablelist/mdtClLinkedUnitConnectionInfoDialog.ui
-          mdtcablelist/mdtClLinkedUnitConnectorInfoDialog.ui
-          mdtcablelist/mdtClLinkBeamEditor.ui
-          mdtcablelist/mdtClConnectableConnectorDialog.ui
-    )
-
-# Header files for complete test tool
-set (HEADER_FILES ${TT_HEADER_FILES} ${CL_HEADER_FILES})
-
-# Source files for complete test tool
+# # Source files for complete test tool
 set (SOURCES_FILES ${TT_SOURCES_FILES} ${CL_SOURCES_FILES})
-
-# Form files for complete test tool
-set (FORM_FILES ${TT_FORM_FILES} ${CL_FORM_FILES})
-
-# Form files for complete test tool
-set (RESOURCE_FILES  )
-
-
-# Fichiers à traiter par le compilateur moc
-# QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
-
-# Fichiers à traiter par le compilateur uic
-# QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
-
-# Fichiers à traiter par le compilateur rcc
-# QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
 # Librairies to link
 add_library (mdttesttool${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
-# add_library (mdttesttool${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
 target_link_libraries(mdttesttool${MDTLIB_VERSION_SUFFIX} "mdtdevice${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttool${MDTLIB_VERSION_SUFFIX} "mdtdatabase${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdttesttool${MDTLIB_VERSION_SUFFIX} "mdttools${MDTLIB_VERSION_SUFFIX}")
