--- a/src/mdtport/CMakeLists.txt
+++ b/src/mdtport/CMakeLists.txt
@@ -5,39 +5,6 @@
 # Project
 project (multidiagtools)
 
-# Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
-set (HEADER_FILES 
-          # Port I/O
-          mdtAbstractPort.h
-          mdtPortThread.h
-          mdtPortThreadHelper.h
-          mdtPortThreadHelperSocket.h
-          mdtPortReadThread.h
-          mdtPortWriteThread.h
-          mdtTcpSocket.h
-          mdtTcpSocketThread.h
-          # Port info
-          mdtPortInfoCbHandler.h
-          # Port manager
-          mdtPortManager.h
-          mdtPortManagerStateMachine.h
-          #mdtUsbPortManager.h
-          #mdtUsbtmcPortManager.h
-          mdtModbusTcpPortManager.h
-          # Port config
-          mdtPortConfigWidget.h
-          # Statud Widget
-          mdtPortStatusWidget.h
-          # Setup dialogs
-          mdtAbstractPortSetupDialog.h
-          mdtUsbtmcPortSetupDialog.h
-          mdtModbusTcpPortSetupDialog.h
-          
-          # New USB/USBTMC API
-          mdtUsbPortThreadNew.h
-          mdtUsbtmcPort.h
-    )
-
 # Liste des fichiers sources
 set (SOURCES_FILES 
           # Port I/O
@@ -90,18 +57,6 @@ set (SOURCES_FILES
           mdtUsbtmcPort.cpp
     )
 
-# Liste des fichiers ui
-set (FORM_FILES
-          mdtPortConfigWidget.ui
-          # Setup dialogs
-          mdtAbstractPortSetupDialog.ui
-          mdtUsbtmcPortSetupDialog.ui
-    )
-
-# Liste des fichiers rcc (ressources)
-set (RESOURCE_FILES
-
-    )
 
 # Platform specific files
 
@@ -112,28 +67,15 @@ if(UNIX)
     linux/mdtPort.cpp
     linux/mdtPortLock.cpp
   )
-  set (HEADER_FILES ${HEADER_FILES} 
-  )
+#   set (HEADER_FILES ${HEADER_FILES} 
+#   )
 endif(UNIX)
-
-# Fichiers à traiter par le compilateur moc
-# QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
-
-# Fichiers à traiter par le compilateur uic
-# QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})
-
-# Fichiers à traiter par le compilateur rcc
-# QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})
 
 # Librairie du projet
 add_library (mdtport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
 target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} Qt5::Core)
 target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "usb-1.0")
 target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
-# add_library (mdtport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
-# target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
-# target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "usb-1.0")
-# target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")
 
 # Translations - We generate a .pro file, that simplify the usage of lupdate
 file(WRITE "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "# Translations project file for lupdate/lrelease\n")
