Working on database module

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -37,6 +37,7 @@ set (SOURCES_FILES
           mdtSortFilterProxyModel.cpp
           mdtFormatProxyModel.cpp
           mdtFormatProxyModelSettings.cpp
+          mdtComboBoxItemDelegate.cpp
           # Essais
           mdtParentChildTableModel.cpp
           mdtParentChildTableItem.cpp
