Working on SQL table copier

--- a/src/mdtdatabase/CMakeLists.txt
+++ b/src/mdtdatabase/CMakeLists.txt
@@ -51,6 +51,9 @@ set (SOURCES_FILES
           
           mdtSqlCopierTableMappingWidget.cpp
           mdtSqlCopierTableMappingWidgetItem.cpp
+          
+          mdtSqlTableCopierMapping.cpp
+          mdtSqlTableCopierMappingModel.cpp
     )
 
 # Platform specific files
